--- a/publications.html
+++ b/publications.html
@@ -85,7 +85,7 @@
 				Chunghyun Park, Yoonwoo Jeong, Minsu Cho, and <b>Jaesik Park</b>.
 				<em>arXiv:TBA, 2021</em>
 			</p>
-			<a href="http://jaesik.info/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+			<a href="" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 		</div>
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/21_arxiv5.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
@@ -122,7 +122,7 @@
 				Wei Dong*, Kwonyoung Ryu*, Michael Kaess, and <b>Jaesik Park</b>.
 				<em>arXiv:TBA, 2021</em>
 			</p>
-			<a href="http://jaesik.info/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+			<a href="" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 		</div>
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/21_bmvc.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
@@ -170,7 +170,7 @@
 				<br><a class="github-button" href="https://github.com/POSTECH-CVLab/SCNeRF" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star POSTECH-CVLab/SCNeRF on GitHub">Star</a><a class="github-button" href="https://github.com/POSTECH-CVLab/SCNeRF/fork" data-icon="octicon-repo-forked" data-size="large" data-show-count="true" aria-label="Fork POSTECH-CVLab/SCNeRF on GitHub">Fork</a>
 			</p>
 			<a href="https://postech-cvlab.github.io/SCNeRF" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
-			<a href="http://jaesik.info/publications/data/21_iccv1.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+			<a href="publications/data/21_iccv1.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 			<a href="https://github.com/POSTECH-CVLab/SCNeRF" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 		</div>
 		<div class="col-lg-4 text-center">
@@ -181,7 +181,7 @@
 				<em>International Conference on Computer Vision (<b>ICCV</b>), 2021</em>
 			</p>
 			<a href="http://cvlab.postech.ac.kr/research/DHVR/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
-			<a href="http://jaesik.info/publications/data/21_iccv2.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+			<a href="publications/data/21_iccv2.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 			<a href="https://arxiv.org/abs/2109.04310" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Supplement</a>
 			<a href="https://github.com/POSTECH-CVLab/DHVR" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 		</div>
@@ -193,7 +193,7 @@
 				<em>International Conference on Computer Vision (<b>ICCV</b>), 2021</em>
 				<br>(*Joint corrresponding authors, <b>Oral</b> Presentation, 3.4% acceptance rate)
 			</p>
-			<a href="http://jaesik.info/publications/data/21_iccv3.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+			<a href="publications/data/21_iccv3.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 			<a href="https://github.com/T2Kim/DeepVirtualMarkers" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 		</div>
 		<div class="col-lg-4 text-center">
@@ -306,8 +306,8 @@
 				<em>Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2020</em>
 				<br>(<b>Oral</b> Presentation, 5.7% acceptance rate)
 			</p>
-			<a href="http://jaesik.info/publications/data/20_cvpr_highconv.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-			<a href="http://jaesik.info/publications/data/20_cvpr_highconv_supp.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Supplement</a>
+			<a href="publications/data/20_cvpr_highconv.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+			<a href="publications/data/20_cvpr_highconv_supp.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Supplement</a>
 			<a href="https://github.com/chrischoy/HighDimConvNets" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 		</div>
 		<div class="col-lg-4 text-center">
@@ -317,8 +317,8 @@
 				Yue Wu, Rongrong Gao, <b>Jaesik Park</b>, and Qifeng Chen.
 				<em>Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2020</em>
 			</p>
-			<a href="http://jaesik.info/publications/data/20_cvpr_future.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-			<a href="http://jaesik.info/publications/data/20_cvpr_highconv_supp.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Supplement</a>
+			<a href="publications/data/20_cvpr_future.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+			<a href="publications/data/20_cvpr_highconv_supp.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Supplement</a>
 			<a href="https://www.youtube.com/watch?v=3zGXWuMLQ5o" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Video</a>
 			<a href="https://github.com/YueWuHKUST/FutureVideoSynthesis" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 		</div>
@@ -349,7 +349,7 @@
 				<em>International Conference on Computer Vision (<b>ICCV</b>), 2019</em>
 				<br>(*Equal contribution)
 			</p>
-			<a href="http://jaesik.info/publications/data/19_iccv.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+			<a href="publications/data/19_iccv.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 			<a href="https://github.com/chrischoy/fcgf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 		</div>
 		<div class="col-lg-4 text-center">
@@ -408,7 +408,7 @@
 				<br>(*Equal contribution. <b>Spotlight Oral</b> Presentation)
 			</p>
 			<a href="http://vladlen.info/publications/tangent-convolutions-dense-prediction-3d/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
-			<a href="http://jaesik.info/publications/data/18_cvpr.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+			<a href="publications/data/18_cvpr.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 			<a href="https://github.com/tatarchm/tangent_conv" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 		</div>
 		<div class="col-lg-4 text-center">
@@ -461,7 +461,7 @@
 				<em>International Conference on Computer Vision (<b>ICCV</b>), 2017</em>
 			</p>
 			<a href="http://redwood-data.org/indoor_lidar_rgbd/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
-			<a href="http://jaesik.info/publications/data/17_iccv_supp.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Supplement</a>
+			<a href="publications/data/17_iccv_supp.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Supplement</a>
 			<a href="http://redwood-data.org/indoor_lidar_rgbd/code.html" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 			<a href="http://redwood-data.org/indoor_lidar_rgbd/download.html" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Data</a>
 		</div>
@@ -473,7 +473,7 @@
 				<em>ACM Transactions on Graphics (Proc. <b>SIGGRAPH</b>), 2017</em>
 			</p>
 			<a href="https://www.tanksandtemples.org/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
-			<a href="http://jaesik.info/publications/data/17_siggraph.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+			<a href="publications/data/17_siggraph.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 			<a href="https://www.youtube.com/watch?v=DJnrp05g7vg" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Video</a>
 			<a href="https://github.com/intel-isl/TanksAndTemples" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 			<a href="https://www.tanksandtemples.org/download/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Data</a>
@@ -513,7 +513,7 @@
 				<b>Jaesik Park</b>, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon.
 				<em>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>), 2016</em>
 			</p>
-			<a href="http://jaesik.info/publications/multiviewps/index.html" class="btn btn-outline-secondary btn-sm" role="button">Project Page</a>
+			<a href="publications/multiviewps/index.html" class="btn btn-outline-secondary btn-sm" role="button">Project Page</a>
 		</div>
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/16_eccv.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
@@ -524,7 +524,7 @@
 				<br>(<b>Oral</b> Presentation, 1.8% acceptance rate)
 			</p>
 			<a href="http://vladlen.info/publications/fast-global-registration/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
-			<a href="http://jaesik.info/publications/data/17_siggraph.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+			<a href="publications/data/17_siggraph.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 			<a href="https://github.com/IntelVCL/FastGlobalRegistration" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 		</div>
 		<div class="col-lg-4 text-center">
@@ -543,7 +543,7 @@
 				<b>Jaesik Park</b>, Yu-Wing Tai, Sudipta N. Sinha, and In So Kweon.
 				<em>Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2016</em>
 			</p>
-			<a href="http://jaesik.info/publications/photoconsistency/index.html" class="btn btn-outline-secondary btn-sm" role="button">Project Page</a>
+			<a href="publications/photoconsistency/index.html" class="btn btn-outline-secondary btn-sm" role="button">Project Page</a>
 			<a href="https://github.com/syncle/photo_consistency" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 		</div>
 		<div class="col-lg-4 text-center">
@@ -578,8 +578,8 @@
 				Seong-Heum Kim, Yu-Wing Tai, <b>Jaesik Park</b>, and In So Kweon.
 				<em>IEEE Transaction on Image Processing (<b>TIP</b>), 2016</em>
 			</p>
-			<a href="http://jaesik.info/publications/data/16_tip.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-			<a href="http://jaesik.info/publications/data/16_tip.txt" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Bibtex</a>
+			<a href="publications/data/16_tip.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+			<a href="publications/data/16_tip.txt" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Bibtex</a>
 		</div>
 	</div>
 </div>
@@ -607,8 +607,8 @@
 				Hyowon Ha, <b>Jaesik Park</b>, and In So Kweon.
 				<em>International Conference on 3D Vision (<b>3DV</b>), 2015</em>
 			</p>
-			<a href="http://jaesik.info/publications/data/15_3dv.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-			<a href="http://jaesik.info/publications/data/15_3dv.txt" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Bibtex</a>
+			<a href="publications/data/15_3dv.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+			<a href="publications/data/15_3dv.txt" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Bibtex</a>
 		</div>
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/15_cvpr_lf.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
@@ -655,7 +655,7 @@
 				<b>Jaesik Park</b>, Hyeongwoo Kim, Yu-Wing Tai, Michael S. Brown, and In-So Kweon.
 				<em>IEEE Transaction on Image Processing (<b>TIP</b>), 2014</em>
 			</p>
-			<a href="http://jaesik.info/web_inplace=publications/depthups/index.html" class="btn btn-outline-secondary btn-sm" role="button">Project Page</a>
+			<a href="publications/depthups/index.html" class="btn btn-outline-secondary btn-sm" role="button">Project Page</a>
 		</div>
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/14_accv.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
@@ -664,8 +664,8 @@
 				Byungtae Ahn, <b>Jaesik Park</b>, and In So Kweon.
 				<em>Asian Conference on Computer Vision (<b>ACCV</b>), 2014</em>
 			</p>
-			<a href="http://jaesik.info/publications/data/14_accv.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-			<a href="http://jaesik.info/publications/data/14_accv.txt" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Bibtex</a>
+			<a href="publications/data/14_accv.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+			<a href="publications/data/14_accv.txt" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Bibtex</a>
 		</div>
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/14_icip.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
@@ -674,8 +674,8 @@
 				Jinsoo Choi, Byungtae Ahn, <b>Jaesik Park</b>, and In So Kweon.
 				<em>International Conference on Image Processing (<b>ICIP</b>), 2014</em>
 			</p>
-			<a href="http://jaesik.info/publications/data/14_icip.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-			<a href="http://jaesik.info/publications/data/14_icip.txt" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Bibtex</a>
+			<a href="publications/data/14_icip.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+			<a href="publications/data/14_icip.txt" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Bibtex</a>
 		</div>
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/14_cvpr_gm.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
@@ -694,7 +694,7 @@
 				<b>Jaesik Park</b>, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon.
 				<em>Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2014</em>
 			</p>
-			<a href="http://jaesik.info/web_inplace=publications/lightcalib/index.html" class="btn btn-outline-secondary btn-sm" role="button">Project Page</a>
+			<a href="publications/lightcalib/index.html" class="btn btn-outline-secondary btn-sm" role="button">Project Page</a>
 		</div>
 	</div>
 </div>
@@ -723,7 +723,7 @@
 				<em>International Conference on Computer Vision (<b>ICCV</b>), 2013</em>
 				<br>(Received 19th <b>HumanTech Paper Award (Silver Prize)</b>, Samsung Electronics Corp.)
 			</p>
-			<a href="http://jaesik.info/publications/multiviewps/index.html" class="btn btn-outline-secondary btn-sm" role="button">Project Page</a>
+			<a href="publications/multiviewps/index.html" class="btn btn-outline-secondary btn-sm" role="button">Project Page</a>
 		</div>
 	</div>
 </div>
@@ -751,9 +751,9 @@
 				<b>Jaesik Park</b>, Tae Hyun Oh, Jiyoung Jung, Yu-Wing Tai, and In So Kweon.
 				<em>European Conference on Computer Vision (<b>ECCV</b>), 2012</em>
 			</p>
-			<a href="http://jaesik.info/publications/data/12_eccv.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-			<a href="http://jaesik.info/publications/data/12_eccv_poster.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Supplement</a>
-			<a href="http://jaesik.info/publications/data/12_eccv.txt" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Bibtex</a>
+			<a href="publications/data/12_eccv.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+			<a href="publications/data/12_eccv_poster.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Supplement</a>
+			<a href="publications/data/12_eccv.txt" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Bibtex</a>
 		</div>
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/12_icip.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
@@ -762,9 +762,9 @@
 				<b>Jaesik Park</b>, Joon-Young Lee, Yu-Wing Tai, and In So Kweon.
 				<em>International Conference on Image Processing (<b>ICIP</b>), 2012</em>
 			</p>
-			<a href="http://jaesik.info/publications/data/12_icip.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-			<a href="http://jaesik.info/publications/data/12_icip_poster.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Supplement</a>
-			<a href="http://jaesik.info/publications/data/12_icip.txt" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Bibtex</a>
+			<a href="publications/data/12_icip.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+			<a href="publications/data/12_icip_poster.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Supplement</a>
+			<a href="publications/data/12_icip.txt" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Bibtex</a>
 		</div>
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/12_cvpr.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
@@ -773,7 +773,7 @@
 				<b>Jaesik Park</b>, Yu-Wing Tai, and In-So Kweon.
 				<em>Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2012</em>
 			</p>
-			<a href="http://jaesik.info/publications/identigram/index.html" class="btn btn-outline-secondary btn-sm" role="button">Project Page</a>
+			<a href="publications/identigram/index.html" class="btn btn-outline-secondary btn-sm" role="button">Project Page</a>
 		</div>
 	</div>
 </div>
@@ -801,7 +801,7 @@
 				Jiyoung Jung, Yekeun Jeong, <b>Jaesik Park</b>, Hyowon Ha, J. D. Kim, and In-So Kweon.
 				<em>IEEE/RSJ International Conference on Intelligent Robots and Systems (<b>IROS</b>), 2011</em>
 			</p>
-			<a href="http://jaesik.info/publications/data/11_iros.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+			<a href="publications/data/11_iros.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 		</div>
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/11_iccv.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
@@ -811,7 +811,7 @@
 				<em>International Conference on Computer Vision (<b>ICCV</b>), 2011</em>
 				<br>(*Equal contributions)
 			</p>
-			<a href="http://jaesik.info/publications/depthups/index.html" class="btn btn-outline-secondary btn-sm" role="button">Project Page</a>
+			<a href="publications/depthups/index.html" class="btn btn-outline-secondary btn-sm" role="button">Project Page</a>
 		</div>
 	</div>
 </div>
