--- a/publications/depthups/index.html
+++ b/publications/depthups/index.html
@@ -76,19 +76,19 @@
 			<p><b>Jaesik Park</b>, Hyeongwoo Kim, Yu-Wing Tai, Michael S. Brown, and In-So Kweon<br>
 			IEEE Transactions of Image Processing (TIP), 2014<br>
 			</p>
-			<a href="http://jaesik.info/publications/depthups/tip14_paper.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-			<a href="http://jaesik.info/publications/depthups/tip14_bibtex.txt" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Bibtex</a>
+			<a href="publications/depthups/tip14_paper.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+			<a href="publications/depthups/tip14_bibtex.txt" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Bibtex</a>
 <br><br>
 			<h4>High Quality Depth Map Upsampling for 3D-TOF Cameras</h4>
 			<p><b>Jaesik Park</b>, Hyeongwoo Kim*, Yu-Wing Tai, Michael S. Brown, and In-So Kweon<br>
 			The 13th International Conference on Computer Vision (ICCV), 2011<br>
 			*The firrst and the second authors provided equal contributions to this work.</p>
-			<a href="http://jaesik.info/publications/depthups/iccv11_paper.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-			<a href="http://jaesik.info/publications/depthups/iccv11_supp.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Supplement</a>
-			<a href="http://jaesik.info/publications/depthups/iccv11_poster.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Poster</a>
-			<a href="http://jaesik.info/publications/depthups/iccv11_bibtex.txt" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Bibtex</a>
-			<a href="http://jaesik.info/publications/depthups/iccv11_executable.zip" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Executable</a>
-			<a href="http://jaesik.info/publications/depthups/iccv11_dataset.zip" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Data</a>
+			<a href="publications/depthups/iccv11_paper.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+			<a href="publications/depthups/iccv11_supp.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Supplement</a>
+			<a href="publications/depthups/iccv11_poster.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Poster</a>
+			<a href="publications/depthups/iccv11_bibtex.txt" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Bibtex</a>
+			<a href="publications/depthups/iccv11_executable.zip" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Executable</a>
+			<a href="publications/depthups/iccv11_dataset.zip" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Data</a>
 <br><br>
 		</div>
 	</div>
