--- a/publications/photoconsistency/index.html
+++ b/publications/photoconsistency/index.html
@@ -76,9 +76,9 @@
 			<p><b>Jaesik Park</b>, Yu-Wing Tai, Sudipta N. Sinha, and In So Kweon<br>
 			CVPR, 2016<br>
 			</p>
-			<a href="http://jaesik.info/publications/photoconsistency/paper.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-			<a href="http://jaesik.info/publications/photoconsistency/supp.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Supplement</a>
-			<a href="http://jaesik.info/publications/photoconsistency/bibtex.txt" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Bibtex</a>
+			<a href="publications/photoconsistency/paper.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+			<a href="publications/photoconsistency/supp.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Supplement</a>
+			<a href="publications/photoconsistency/bibtex.txt" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Bibtex</a>
 			<a href="https://github.com/syncle/photo_consistency" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 <br><br>
 		</div>
