--- a/publications/lightcalib/index.html
+++ b/publications/lightcalib/index.html
@@ -74,10 +74,10 @@
 			<p><b>Jaesik Park</b>, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon<br>
 			CVPR, 2014<br>
 			(Dataset has raw images used in the experiment. Note that the size of this file is 2.15GB)</p>
-			<a href="http://jaesik.info/publications/lightcalib/paper.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
-			<a href="http://jaesik.info/publications/lightcalib/supp.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Supplement</a>
-			<a href="http://jaesik.info/publications/lightcalib/poster.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Poster</a>
-			<a href="http://jaesik.info/publications/lightcalib/bibtex.txt" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Bibtex</a>
+			<a href="publications/lightcalib/paper.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+			<a href="publications/lightcalib/supp.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Supplement</a>
+			<a href="publications/lightcalib/poster.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Poster</a>
+			<a href="publications/lightcalib/bibtex.txt" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Bibtex</a>
 			<a href="https://postechackr-my.sharepoint.com/:u:/g/personal/jaesik_postech_ac_kr/Ebnodir1zzhJgiQupYkhyuQBsCLfAkNNKZPqx3eS-ihw5w?e=evJ2I5" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Data</a>
 <br><br>
 		</div>
