--- a/publications.html
+++ b/publications.html
@@ -74,7 +74,7 @@
 			<h4>Instance-wise Occlusion and Depth Orders in Natural Scenes</h4>
 			<p class="text-muted">
 				Hyunmin Lee and <b>Jaesik Park</b>.
-				<em>arXiv:2111.14562, 2021</em>
+				<em>2111.14562 (arXiv), 2021</em>
 			</p>
 			<a href="https://arxiv.org/abs/2111.14562" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 		</div>
@@ -83,7 +83,7 @@
 			<h4>Fast Point Transformer</h4>
 			<p class="text-muted">
 				Chunghyun Park, Yoonwoo Jeong, Minsu Cho, and <b>Jaesik Park</b>.
-				<em>arXiv:TBA, 2021</em>
+				<em>TBA (arXiv), 2021</em>
 			</p>
 			<a href="" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 		</div>
@@ -92,7 +92,7 @@
 			<h4>Putting 3D Spatially Sparse Networks on a Diet</h4>
 			<p class="text-muted">
 				Junha Lee, Christopher Choy, and <b>Jaesik Park</b>.
-				<em>arXiv:2112.01316, 2021</em>
+				<em>2112.01316 (arXiv), 2021</em>
 			</p>
 			<a href="https://arxiv.org/abs/2112.01316" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 		</div>
@@ -101,7 +101,7 @@
 			<h4>PointMixer: MLP-Mixer for Point Cloud Understanding</h4>
 			<p class="text-muted">
 				Jaesung Choe*, Chunghyun Park*, Francois Rameau, <b>Jaesik Park</b>, and In So Kweon.
-				<em>arXiv:2111.11187, 2021</em>
+				<em>2111.11187 (arXiv), 2021</em>
 				<br>(*Equal contribution)
 			</p>
 			<a href="https://arxiv.org/abs/2111.11187" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
@@ -111,7 +111,7 @@
 			<h4>Deep Point Cloud Reconstruction</h4>
 			<p class="text-muted">
 				Jaesung Choe, Byeongin Joung, Francois Rameau, <b>Jaesik Park</b>, and In So Kweon.
-				<em>arXiv:2111.11704, 2021</em>
+				<em>2111.11704 (arXiv), 2021</em>
 			</p>
 			<a href="https://arxiv.org/abs/2111.11704" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 		</div>
@@ -120,7 +120,7 @@
 			<h4>Real-time Registration and Reconstruction with Cylindrical LiDAR Images</h4>
 			<p class="text-muted">
 				Wei Dong*, Kwonyoung Ryu*, Michael Kaess, and <b>Jaesik Park</b>.
-				<em>arXiv:TBA, 2021</em>
+				<em>TBA (arXiv), 2021</em>
 			</p>
 			<a href="" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 		</div>
@@ -211,7 +211,7 @@
 			<h4>Accelerated Crystal Structure Prediction of Multi-elements Random Alloy using Expandable Features</h4>
 			<p class="text-muted">
 				Taewon Jin, Taesoo Park, Ina Park, <b>Jaesik Park</b>*, and Ji Hoon Shim*.
-				<em><b>Scientific Reports</b> published by Nature Research, 2021</em>
+				<em>published by Nature Research (<b>Scientific Reports</b>), 2021</em>
 				<br>(*Joint corrresponding authors)
 			</p>
 			<a href="https://www.nature.com/articles/s41598-021-84544-8" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
@@ -267,7 +267,7 @@
 			<h4>Combinatorial 3D Shape Generation via Sequential Assembly</h4>
 			<p class="text-muted">
 				Jungtaek Kim, Hyunsoo Chung, Minsu Cho, and <b>Jaesik Park</b>.
-				<em>Machine Learning for Engineering Modeling, Simulation, and Design (ML4Eng, <b>NeurIPS workshop</b>), 2020</em>
+				<em>Machine Learning for Engineering Modeling, Simulation, and Design (ML4Eng), <b>NeurIPS workshop</b>, 2020</em>
 			</p>
 			<a href="https://arxiv.org/abs/2004.07414" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 			<a href="https://github.com/POSTECH-CVLab/Combinatorial-3D-Shape-Generation" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
@@ -277,7 +277,7 @@
 			<h4>Fragment Relation Networks for Geometric Shape Assembly</h4>
 			<p class="text-muted">
 				Jinhwi Lee*, Jungtaek Kim*, Hyunsoo Chung, <b>Jaesik Park</b>, and Minsu Cho.
-				<em>Learning Meets Combinatorial Algorithms (LMCA, <b>NeurIPS workshop</b>), 2020</em>
+				<em>Learning Meets Combinatorial Algorithms (LMCA), <b>NeurIPS workshop</b>, 2020</em>
 				<br>(*Equal contribution)
 			</p>
 			<a href="https://openreview.net/pdf?id=05KxJSXwPl" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
@@ -407,7 +407,7 @@
 			<h4>Open3D: A Modern Library For 3D Data Processing</h4>
 			<p class="text-muted">
 				Qian-Yi Zhou, <b>Jaesik Park</b>, and Vladlen Koltun.
-				<em>Technical Report, arXiv:1801.09847, 2018</em>
+				<em>1801.09847 (arXiv), 2018</em>
 				<br><a class="github-button" href="https://github.com/intel-isl/open3d" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star intel-isl/open3d on GitHub">Star</a><a class="github-button" href="https://github.com/intel-isl/open3d/fork" data-icon="octicon-repo-forked" data-size="large" data-show-count="true" aria-label="Fork intel-isl/open3d on GitHub">Fork</a>
 			</p>
 			<a href="http://www.open3d.org" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
@@ -459,13 +459,22 @@
 			<h4>Tanks and Temples: Benchmarking Large-Scale Scene Reconstruction</h4>
 			<p class="text-muted">
 				Arno Knapitsch, <b>Jaesik Park</b>, Qian-Yi Zhou, and Vladlen Koltun.
-				<em>ACM Transactions on Graphics (Proc. <b>SIGGRAPH</b>), 2017</em>
+				<em>ACM Transactions on Graphics (<b>SIGGRAPH</b>), 2017</em>
 			</p>
 			<a href="https://www.tanksandtemples.org/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
 			<a href="publications/data/17_siggraph.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 			<a href="https://www.youtube.com/watch?v=DJnrp05g7vg" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Video</a>
 			<a href="https://github.com/intel-isl/TanksAndTemples" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
 			<a href="https://www.tanksandtemples.org/download/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Data</a>
+		</div>
+		<div class="col-lg-4 text-center">
+			<img src="publications/data/16_ijcv.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
+			<h4>Refining Geometry from Depth Sensors using IR Shading Images</h4>
+			<p class="text-muted">
+				Gyeongmin Choe, <b>Jaesik Park</b>, Yu-Wing Tai, and In So Kweon.
+				<em>International Journal of Computer Vision (<b>IJCV</b>), 2017</em>
+			</p>
+			<a href="https://drive.google.com/file/d/1LsgtzkOt-z8W6iX8tHHV8H_XTqTOg-_q/view" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 		</div>
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/17_cgf.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
@@ -513,15 +522,6 @@
 			<a href="http://vladlen.info/publications/fast-global-registration/" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Project Page</a>
 			<a href="publications/data/17_siggraph.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 			<a href="https://github.com/IntelVCL/FastGlobalRegistration" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
-		</div>
-		<div class="col-lg-4 text-center">
-			<img src="publications/data/16_ijcv.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
-			<h4>Refining Geometry from Depth Sensors using IR Shading Images</h4>
-			<p class="text-muted">
-				Gyeongmin Choe, <b>Jaesik Park</b>, Yu-Wing Tai, and In So Kweon.
-				<em>International Journal of Computer Vision (<b>IJCV</b>), 2016</em>
-			</p>
-			<a href="https://drive.google.com/file/d/1LsgtzkOt-z8W6iX8tHHV8H_XTqTOg-_q/view" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 		</div>
 		<div class="col-lg-4 text-center">
 			<img src="publications/data/16_cvpr_color.jpg" class="img-fluid rounded float-center img-thumbnail shadow mb-3">
