--- a/publications/identigram/index.html
+++ b/publications/identigram/index.html
@@ -64,12 +64,29 @@
 			<h2>Publication(s)</h2>
 			<h4>Identigram/Watermark removal using cross-channel correlation</h4>
 			<p><b>Jaesik Park</b>, Yu-Wing Tai, and In-So Kweon<br>
-			CVPR, 2012<br>
+			Conference on Computer Vision and Pattern Recognition (CVPR)<br>
 			</p>
+			<p>
 				<a href="publications/identigram/paper.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a href="publications/identigram/supp.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Supplement</a>
 				<a href="publications/identigram/poster.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Poster</a>
 				<a href="publications/identigram/executable.zip" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Executable</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Park_IdentigramWatermark_CVPR_2012" aria-expanded="false" aria-controls="Park_IdentigramWatermark_CVPR_2012">BibTeX</a>
+			</p>
+			<div class="collapse" id="Park_IdentigramWatermark_CVPR_2012">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Park_IdentigramWatermark_CVPR_2012,<br>
+							Title={Identigram/Watermark removal using cross-channel correlation},<br>
+							Author={Jaesik Park and Yu-Wing Tai and In-So Kweon},<br>
+							Booktitle={Proceedings of the Conference on Computer Vision and Pattern Recognition (CVPR)},<br>
+							Year={2012}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
 <br><br>
 		</div>
 	</div>
