--- a/publications/depthups/index.html
+++ b/publications/depthups/index.html
@@ -74,19 +74,52 @@
 			<h2>Publication(s)</h2>
 			<h4>High Quality Depth Map Upsampling and Completion for RGB-D Cameras</h4>
 			<p><b>Jaesik Park</b>, Hyeongwoo Kim, Yu-Wing Tai, Michael S. Brown, and In-So Kweon<br>
-			IEEE Transactions of Image Processing (TIP), 2014<br>
+			IEEE Transactions of Image Processing (TIP)<br>
 			</p>
+			<p>
 				<a href="publications/depthups/tip14_paper.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Park_High_TIP_2014" aria-expanded="false" aria-controls="Park_High_TIP_2014">BibTeX</a>
+			</p>
+			<div class="collapse" id="Park_High_TIP_2014">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Park_High_TIP_2014,<br>
+							Title={High Quality Depth Map Upsampling and Completion for RGB-D Cameras},<br>
+							Author={Jaesik Park and Hyeongwoo Kim and Yu-Wing Tai and Michael S. Brown and In-So Kweon},<br>
+							Journal={IEEE Transactions of Image Processing (TIP)},<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
 <br><br>
 			<h4>High Quality Depth Map Upsampling for 3D-TOF Cameras</h4>
 			<p><b>Jaesik Park</b>, Hyeongwoo Kim*, Yu-Wing Tai, Michael S. Brown, and In-So Kweon<br>
-			The 13th International Conference on Computer Vision (ICCV), 2011<br>
+			The 13th International Conference on Computer Vision (ICCV)<br>
 			*The firrst and the second authors provided equal contributions to this work.</p>
+			<p>
 				<a href="publications/depthups/iccv11_paper.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a href="publications/depthups/iccv11_supp.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Supplement</a>
 				<a href="publications/depthups/iccv11_poster.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Poster</a>
 				<a href="publications/depthups/iccv11_executable.zip" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Executable</a>
 				<a href="publications/depthups/iccv11_dataset.zip" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Data</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Park_High_ICCV_2011" aria-expanded="false" aria-controls="Park_High_ICCV_2011">BibTeX</a>
+			</p>
+			<div class="collapse" id="Park_High_ICCV_2011">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Park_High_ICCV_2011,<br>
+							Title={High Quality Depth Map Upsampling for 3D-TOF Cameras},<br>
+							Author={Jaesik Park and Hyeongwoo Kim and Yu-Wing Tai and Michael S. Brown and In-So Kweon},<br>
+							Booktitle={Proceedings of the The 13th International Conference on Computer Vision (ICCV)},<br>
+							Year={2011}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
 <br><br>
 		</div>
 	</div>
