--- a/publications/lightcalib/index.html
+++ b/publications/lightcalib/index.html
@@ -72,12 +72,29 @@
 			<h2>Publication(s)</h2>
 			<h4>Calibrating a Non-isotropic Near Point Light Source using a Plane</h4>
 			<p><b>Jaesik Park</b>, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon<br>
-			CVPR, 2014<br>
+			Conference on Computer Vision and Pattern Recognition (CVPR)<br>
 			(Dataset has raw images used in the experiment. Note that the size of this file is 2.15GB)</p>
+			<p>
 				<a href="publications/lightcalib/paper.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a href="publications/lightcalib/supp.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Supplement</a>
 				<a href="publications/lightcalib/poster.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Poster</a>
 				<a href="https://postechackr-my.sharepoint.com/:u:/g/personal/jaesik_postech_ac_kr/Ebnodir1zzhJgiQupYkhyuQBsCLfAkNNKZPqx3eS-ihw5w?e=evJ2I5" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Data</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Park_Calibrating_CVPR_2014" aria-expanded="false" aria-controls="Park_Calibrating_CVPR_2014">BibTeX</a>
+			</p>
+			<div class="collapse" id="Park_Calibrating_CVPR_2014">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Park_Calibrating_CVPR_2014,<br>
+							Title={Calibrating a Non-isotropic Near Point Light Source using a Plane},<br>
+							Author={Jaesik Park and Sudipta N. Sinha and Yasuyuki Matsushita and Yu-Wing Tai and In So Kweon},<br>
+							Booktitle={Proceedings of the Conference on Computer Vision and Pattern Recognition (CVPR)},<br>
+							Year={2014}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
 <br><br>
 		</div>
 	</div>
