--- a/publications/multiviewps/index.html
+++ b/publications/multiviewps/index.html
@@ -71,18 +71,51 @@
 			<h2>Publication(s)</h2>
 			<h4>Robust Multiview Photometric Stereo using Planar Mesh Parameterization</h4>
 			<p><b>Jaesik Park</b>, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon<br>
-			IEEE Transactions of Pattern Analysis and Machine Intelligence (TPAMI), 2016<br>
+			IEEE Transactions of Pattern Analysis and Machine Intelligence (TPAMI)<br>
 			</p>
+			<p>
 				<a href="publications/multiviewps/PAMI2016.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Park_Robust_TPAMI_2016" aria-expanded="false" aria-controls="Park_Robust_TPAMI_2016">BibTeX</a>
+			</p>
+			<div class="collapse" id="Park_Robust_TPAMI_2016">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@article{Park_Robust_TPAMI_2016,<br>
+							Title={Robust Multiview Photometric Stereo using Planar Mesh Parameterization},<br>
+							Author={Jaesik Park and Sudipta N. Sinha and Yasuyuki Matsushita and Yu-Wing Tai and In So Kweon},<br>
+							Journal={IEEE Transactions of Pattern Analysis and Machine Intelligence (TPAMI)},<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
 <br><br>
 			<h4>Multiview Photometric Stereo using Planar Mesh Parameterization</h4>
 			<p><b>Jaesik Park</b>, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon<br>
-			The 14th International Conference on Computer Vision (ICCV), 2013<br>
+			The 14th International Conference on Computer Vision (ICCV)<br>
 			</p>
+			<p>
 				<a href="publications/multiviewps/ICCV2013.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a href="publications/multiviewps/ICCV2013poster.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Poster</a>
 				<a href="https://www.dropbox.com/s/pdhiexb4jur5tqf/MeshOpt_Executable.zip?dl=1" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Executable</a>
 				<a href="publications/multiviewps/dataset.txt" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Data</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Park_Multiview_ICCV_2013" aria-expanded="false" aria-controls="Park_Multiview_ICCV_2013">BibTeX</a>
+			</p>
+			<div class="collapse" id="Park_Multiview_ICCV_2013">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Park_Multiview_ICCV_2013,<br>
+							Title={Multiview Photometric Stereo using Planar Mesh Parameterization},<br>
+							Author={Jaesik Park and Sudipta N. Sinha and Yasuyuki Matsushita and Yu-Wing Tai and In So Kweon},<br>
+							Booktitle={Proceedings of the The 14th International Conference on Computer Vision (ICCV)},<br>
+							Year={2013}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
 <br><br>
 		</div>
 	</div>
