--- a/publications/photoconsistency/index.html
+++ b/publications/photoconsistency/index.html
@@ -74,11 +74,28 @@
 			<h2>Publication(s)</h2>
 			<h4>Efficient and Robust Color Consistency for Community Photo Collections</h4>
 			<p><b>Jaesik Park</b>, Yu-Wing Tai, Sudipta N. Sinha, and In So Kweon<br>
-			CVPR, 2016<br>
+			Conference on Computer Vision and Pattern Recognition (CVPR)<br>
 			</p>
+			<p>
 				<a href="publications/photoconsistency/paper.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a href="publications/photoconsistency/supp.pdf" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Supplement</a>
 				<a href="https://github.com/syncle/photo_consistency" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Code</a>
+				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Park_Efficient_CVPR_2016" aria-expanded="false" aria-controls="Park_Efficient_CVPR_2016">BibTeX</a>
+			</p>
+			<div class="collapse" id="Park_Efficient_CVPR_2016">
+				<div class="card">
+					<div class="card-body">
+						<p class="card-text text-start fw-lighter">
+							@inproceedings{Park_Efficient_CVPR_2016,<br>
+							Title={Efficient and Robust Color Consistency for Community Photo Collections},<br>
+							Author={Jaesik Park and Yu-Wing Tai and Sudipta N. Sinha and In So Kweon},<br>
+							Booktitle={Proceedings of the Conference on Computer Vision and Pattern Recognition (CVPR)},<br>
+							Year={2016}<br>
+							}
+						</p>
+					</div>
+				</div>
+			</div>
 <br><br>
 		</div>
 	</div>
