--- a/publications.html
+++ b/publications.html
@@ -84,10 +84,10 @@
 				<div class="card">
 					<div class="card-body">
 						<p class="card-text text-start fw-lighter">
-							@inproceedings{Lee_Instancewise_arXiv_2021,<br>
+							@article{Lee_Instancewise_arXiv_2021,<br>
 							Title={Instance-wise Occlusion and Depth Orders in Natural Scenes},<br>
 							Author={Hyunmin Lee and Jaesik Park},<br>
-							Booktitle={Proceedings of the 2111.14562 (arXiv)},<br>
+							Journal={2111.14562 (arXiv)},<br>
 							Year={2021}<br>
 							}
 						</p>
@@ -110,10 +110,10 @@
 				<div class="card">
 					<div class="card-body">
 						<p class="card-text text-start fw-lighter">
-							@inproceedings{Park_Fast_arXiv_2021,<br>
+							@article{Park_Fast_arXiv_2021,<br>
 							Title={Fast Point Transformer},<br>
 							Author={Chunghyun Park and Yoonwoo Jeong and Minsu Cho and Jaesik Park},<br>
-							Booktitle={Proceedings of the TBA (arXiv)},<br>
+							Journal={TBA (arXiv)},<br>
 							Year={2021}<br>
 							}
 						</p>
@@ -136,10 +136,10 @@
 				<div class="card">
 					<div class="card-body">
 						<p class="card-text text-start fw-lighter">
-							@inproceedings{Lee_Putting_arXiv_2021,<br>
+							@article{Lee_Putting_arXiv_2021,<br>
 							Title={Putting 3D Spatially Sparse Networks on a Diet},<br>
 							Author={Junha Lee and Christopher Choy and Jaesik Park},<br>
-							Booktitle={Proceedings of the 2112.01316 (arXiv)},<br>
+							Journal={2112.01316 (arXiv)},<br>
 							Year={2021}<br>
 							}
 						</p>
@@ -163,10 +163,10 @@
 				<div class="card">
 					<div class="card-body">
 						<p class="card-text text-start fw-lighter">
-							@inproceedings{Choe_PointMixer_arXiv_2021,<br>
+							@article{Choe_PointMixer_arXiv_2021,<br>
 							Title={PointMixer: MLP-Mixer for Point Cloud Understanding},<br>
 							Author={Jaesung Choe and Chunghyun Park and Francois Rameau and Jaesik Park and In So Kweon},<br>
-							Booktitle={Proceedings of the 2111.11187 (arXiv)},<br>
+							Journal={2111.11187 (arXiv)},<br>
 							Year={2021}<br>
 							}
 						</p>
@@ -189,10 +189,10 @@
 				<div class="card">
 					<div class="card-body">
 						<p class="card-text text-start fw-lighter">
-							@inproceedings{Choe_Deep_arXiv_2021,<br>
+							@article{Choe_Deep_arXiv_2021,<br>
 							Title={Deep Point Cloud Reconstruction},<br>
 							Author={Jaesung Choe and Byeongin Joung and Francois Rameau and Jaesik Park and In So Kweon},<br>
-							Booktitle={Proceedings of the 2111.11704 (arXiv)},<br>
+							Journal={2111.11704 (arXiv)},<br>
 							Year={2021}<br>
 							}
 						</p>
@@ -215,10 +215,10 @@
 				<div class="card">
 					<div class="card-body">
 						<p class="card-text text-start fw-lighter">
-							@inproceedings{Dong_Realtime_arXiv_2021,<br>
+							@article{Dong_Realtime_arXiv_2021,<br>
 							Title={Real-time Registration and Reconstruction with Cylindrical LiDAR Images},<br>
 							Author={Wei Dong and Kwonyoung Ryu and Michael Kaess and Jaesik Park},<br>
-							Booktitle={Proceedings of the TBA (arXiv)},<br>
+							Journal={TBA (arXiv)},<br>
 							Year={2021}<br>
 							}
 						</p>
@@ -231,7 +231,7 @@
 			<h4>Self-Supervised Real-time Video Stabilization</h4>
 			<p class="text-muted">
 				Jinsoo Choi, <b>Jaesik Park</b>, and In So Kweon.
-				<em>The British Machine Vision Conference (<b>BMVC</b>), 2021</em>
+				<em>British Machine Vision Conference (<b>BMVC</b>), 2021</em>
 			</p>
 			<p>
 				<a href="https://arxiv.org/abs/2111.05980" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
@@ -244,7 +244,7 @@
 							@inproceedings{Choi_SelfSupervised_BMVC_2021,<br>
 							Title={Self-Supervised Real-time Video Stabilization},<br>
 							Author={Jinsoo Choi and Jaesik Park and In So Kweon},<br>
-							Booktitle={Proceedings of the The British Machine Vision Conference (BMVC)},<br>
+							Booktitle={Proceedings of the British Machine Vision Conference (BMVC)},<br>
 							Year={2021}<br>
 							}
 						</p>
@@ -902,10 +902,10 @@
 				<div class="card">
 					<div class="card-body">
 						<p class="card-text text-start fw-lighter">
-							@inproceedings{Zhou_Open3D_arXiv_2018,<br>
+							@article{Zhou_Open3D_arXiv_2018,<br>
 							Title={Open3D: A Modern Library For 3D Data Processing},<br>
 							Author={Qian-Yi Zhou and Jaesik Park and Vladlen Koltun},<br>
-							Booktitle={Proceedings of the 1801.09847 (arXiv)},<br>
+							Journal={1801.09847 (arXiv)},<br>
 							Year={2018}<br>
 							}
 						</p>
