--- a/publications.html
+++ b/publications.html
@@ -205,10 +205,10 @@
 			<h4>Real-time Registration and Reconstruction with Cylindrical LiDAR Images</h4>
 			<p class="text-muted">
 				Wei Dong*, Kwonyoung Ryu*, Michael Kaess, and <b>Jaesik Park</b>.
-				<em>TBA (arXiv), 2021</em>
+				<em>2112.02779 (arXiv), 2021</em>
 			</p>
 			<p>
-				<a href="" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
+				<a href="https://arxiv.org/abs/2112.02779" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
 				<a class="btn btn-outline-secondary btn-sm" role="button" data-bs-toggle="collapse" data-bs-target="#Dong_Realtime_arXiv_2021" aria-expanded="false" aria-controls="Dong_Realtime_arXiv_2021">BibTeX</a>
 			</p>
 			<div class="collapse" id="Dong_Realtime_arXiv_2021">
@@ -218,7 +218,7 @@
 							@article{Dong_Realtime_arXiv_2021,<br>
 							Title={Real-time Registration and Reconstruction with Cylindrical LiDAR Images},<br>
 							Author={Wei Dong and Kwonyoung Ryu and Michael Kaess and Jaesik Park},<br>
-							Journal={TBA (arXiv)},<br>
+							Journal={2112.02779 (arXiv)},<br>
 							Year={2021}<br>
 							}
 						</p>
