--- a/publications.html
+++ b/publications.html
@@ -206,6 +206,7 @@
 			<p class="text-muted">
 				Wei Dong*, Kwonyoung Ryu*, Michael Kaess, and <b>Jaesik Park</b>.
 				<em>2112.02779 (arXiv), 2021</em>
+				<br>(*Equal contribution)
 			</p>
 			<p>
 				<a href="https://arxiv.org/abs/2112.02779" target="_blank" class="btn btn-outline-secondary btn-sm" role="button"> Paper</a>
